# multi-agent-deep-research

./: .clinerules  .dockerignore  .git-commit-msg.tmp  .gitignore  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  FIND_RAILWAY_URL.md  LinkedIn-Profiles.txt  Model Selection Analysis for Your Multi-Agent Deep.md  PROJECT_CONTEXT.md  QUICK_DEPLOY.md  QUICK_START.md  RAILWAY_SETUP.md  README.md  README_BACKEND.md  README_FRONTEND.md  VERCEL_BRANCH_SETUP.md  VERCEL_BRANCH_TROUBLESHOOTING.md  app.py  docker-compose.yml  download.csv  env.example  fly.toml  package-lock.json  package.json  requirements.txt  run_backend.bat  run_backend.sh  streamlit_tts_component.py  test_system.py  vercel.json
.cursor/: mcp.json.example
agents/: __init__.py  analyzer.py  credibility.py  credibility_enhanced.py  enrichment.py  insight_generator.py  report_builder.py  retriever.py
backend/: main.py  requirements.txt
chroma_store/: chroma.sqlite3
context/: AGENT_CONVERSATION_VISUALIZATION_PLAN.md  Build & Deploy Strategy for 12-Hour Hackathon Demo.md  Chronicle_Presentation_Summary.md  Complete UI Overhaul for Production Impact.md  D3_VISUALIZATION_PLAN.md  Enhanced React UI Progress Bar for Multi-Agent Dee.md  Leverage Your Pro Subscriptions in the Hackathon P.md  MIGRATION_TO_OPENROUTER.md  OPENROUTER_SETUP.md  Optimized 12-Hour Hackathon Implementation_ Hybrid.md  PROJECT_SUMMARY.md  Parallel Accessibility Layer_ React + Vite Fronten.md  Pro_Subscriptions_Execution_Plan.md  idea  (+9 more)
mcp/: README.md  pyproject.toml
mcp/chronicle_mcp/: __init__.py  __main__.py  api.py  local.py  server.py
(+213 files in other folders)
