[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chronicle-mcp"
version = "0.1.0"
description = "MCP server for Chronicle — multi-agent cited research for founders"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Girish Hiremath", email = "gen.girish@gmail.com" }]
keywords = ["mcp", "research", "langgraph", "founders", "market-sizing"]
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
local = [
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    "tavily-python>=0.5.0",
    "arxiv>=2.1.0",
    "requests>=2.31.0",
]

[project.scripts]
chronicle-mcp = "chronicle_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["chronicle_mcp"]
